--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Menu</string>
     <string name="drawer_close">Swopp</string>
+    <string name="title_activity_register">RegisterActivity</string>
 
 </resources>
