--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Swopp</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="drawer_open">Menu</string>
+    <string name="drawer_close">Swopp</string>
+    <string name="title_activity_register">RegisterActivity</string>
 
 </resources>
