--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -7,5 +7,12 @@
     <string name="drawer_open">Menu</string>
     <string name="drawer_close">Swopp</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="kleding">Kleding</string>
+    <string name="sieraden">Sieraden</string>
+    <string name="accessoires">Accessoires</string>
+    <string name="login">Login</string>
+    <string name="action_log_out">Log out</string>
+    <string name="title_activity_profile">Profile</string>
+    <string name="my_products">My products</string>
 
 </resources>
