--- a/Swopp2/res/values/strings.xml
+++ b/Swopp2/res/values/strings.xml
@@ -3,10 +3,12 @@
 
     <string name="app_name">Swopp2</string>
     <string name="hello_world">Hello world!</string>
-	<string name="drawer_open">Menu</string>
+    <string name="drawer_open">Menu</string>
     <string name="drawer_close">Swopp</string>
-    <string name="kleding">Kleding</string>
+    <string name="kleding">Clothing</string>
     <string name="sieraden">Sieraden</string>
     <string name="accessoires">Accessoires</string>
-    
+    <string name="title_activity_clothing">Clothing</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
